--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Questions**\n",
+    "### **Questions**\n",
     "*Submit the answers to the following questions*:\n",
     "1. According to the tutorials, if we want to edit the environment configuration, action space, observation space, reward function, or termination condition of the Isaac-Cartpole-v0 task, which file should we look at, and where is each part located?\n",
     "2.  What are the action space and observation space for an agent defined in the Isaac-Cartpole-v0 task?\n",
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer 1**"
+    "#### **Answer 1**"
    ]
   },
   {
@@ -96,10 +96,94 @@
    "source": [
     "From running program according to the tutorials \n",
     "\n",
-    "```\n",
     "python source/standalone/workflows/sb3/train.py --task Isaac-Cartpole-v0 --num_envs 64 --headless --video --video_length 500 --video_interval 1000\n",
+    "\n",
+    "We can known source program file for execute in IsaacLab folder, the execute program is name `train.py`, with in main function `main(env_cfg: ManagerBasedRLEnvCfg | DirectRLEnvCfg | DirectMARLEnvCfg, agent_cfg: dict)` that require a 2 parameter with environment configure and agent configure and got pass by  \n",
     "```\n",
-    "We can known source program file for execute in IsaacLab folder, the execute program is name `train.py`"
+    "@hydra_task_config(args_cli.task, \"sb3_cfg_entry_point\")\n",
+    "```\n",
+    "in line 72 of program in. By `args_cli.task` is got update environment and agent file while running program in CLI "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dive into **`hydra_task_config`**\n",
+    "\n",
+    "We can found function in path *`source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/utils/hydra.py`*\n",
+    "\n",
+    "```python\n",
+    "def hydra_task_config(task_name: str, agent_cfg_entry_point: str) -> Callable:\n",
+    "    \"\"\"Decorator to handle the Hydra configuration for a task.\n",
+    "\n",
+    "    This decorator registers the task to Hydra and updates the environment and agent configurations from Hydra parsed\n",
+    "    command line arguments.\n",
+    "\n",
+    "    Args:\n",
+    "        task_name: The name of the task.\n",
+    "        agent_cfg_entry_point: The entry point key to resolve the agent's configuration file.\n",
+    "\n",
+    "    Returns:\n",
+    "        The decorated function with the envrionment's and agent's configurations updated from command line arguments.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def decorator(func):\n",
+    "        @functools.wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            # register the task to Hydra\n",
+    "            env_cfg, agent_cfg = register_task_to_hydra(task_name, agent_cfg_entry_point)\n",
+    "\n",
+    "            # define the new Hydra main function\n",
+    "            @hydra.main(config_path=None, config_name=task_name, version_base=\"1.3\")\n",
+    "            def hydra_main(hydra_env_cfg: DictConfig, env_cfg=env_cfg, agent_cfg=agent_cfg):\n",
+    "                # convert to a native dictionary\n",
+    "                hydra_env_cfg = OmegaConf.to_container(hydra_env_cfg, resolve=True)\n",
+    "                # replace string with slices because OmegaConf does not support slices\n",
+    "                hydra_env_cfg = replace_strings_with_slices(hydra_env_cfg)\n",
+    "                # update the configs with the Hydra command line arguments\n",
+    "                env_cfg.from_dict(hydra_env_cfg[\"env\"])\n",
+    "                # replace strings that represent gymnasium spaces because OmegaConf does not support them.\n",
+    "                # this must be done after converting the env configs from dictionary to avoid internal reinterpretations\n",
+    "                replace_strings_with_env_cfg_spaces(env_cfg)\n",
+    "                # get agent configs\n",
+    "                if isinstance(agent_cfg, dict):\n",
+    "                    agent_cfg = hydra_env_cfg[\"agent\"]\n",
+    "                else:\n",
+    "                    agent_cfg.from_dict(hydra_env_cfg[\"agent\"])\n",
+    "                # call the original function\n",
+    "                func(env_cfg, agent_cfg, *args, **kwargs)\n",
+    "\n",
+    "            # call the new Hydra main function\n",
+    "            hydra_main()\n",
+    "\n",
+    "        return wrapper\n",
+    "\n",
+    "    return decorator\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from the CLI we pass argument *--task `Isaac-Cartpole-v0`* and *`\"sb3_cfg_entry_point\"` in code* to `hydra_task_config` function to return the decorated function with the envrionment's and agent's configurations updated from command line arguments.\n",
+    "+ and it's have call `register_task_to_hydra` to return a tuple containing the parsed environment and agent configuration objects.\n",
+    "    + and call `load_cfg_from_registry` to return the parsed configuration object\n",
+    "*Source*\n",
+    "- `hydra_task_config` and  `register_task_to_hydra` function\n",
+    "    - https://github.com/isaac-sim/IsaacLab/blob/b5078debe1896c449d5b3a940cebe21bf1560bd0/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/utils/hydra.py#L61 []\n",
+    "- `load_cfg_from_registry` function \n",
+    "    - https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/utils/parse_cfg.py#L19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In better we can found configuration path of environment in \n",
+    "https://isaac-sim.github.io/IsaacLab/main/source/overview/environments.html\n",
+    "https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole/cartpole_env_cfg.py\n"
    ]
   }
  ],
