--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -174,7 +174,9 @@
     "- `hydra_task_config` and  `register_task_to_hydra` function\n",
     "    - https://github.com/isaac-sim/IsaacLab/blob/b5078debe1896c449d5b3a940cebe21bf1560bd0/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/utils/hydra.py#L61 []\n",
     "- `load_cfg_from_registry` function \n",
-    "    - https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/utils/parse_cfg.py#L19"
+    "    - https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/utils/parse_cfg.py#L19\n",
+    "\n",
+    "or in CLI *task* arguments we can locate path of *task* in **IsaacLab** folder "
    ]
   },
   {
