--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -87,7 +87,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Answer 1**"
+    "#### **Answer 1.1**\n",
+    "*1. According to the tutorials, if we want to edit the environment configuration, action space, observation space, reward function, or termination condition of the Isaac-Cartpole-v0 task, which file should we look at, and where is each part located?*"
    ]
   },
   {
@@ -176,16 +177,368 @@
     "- `load_cfg_from_registry` function \n",
     "    - https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/utils/parse_cfg.py#L19\n",
     "\n",
-    "or in CLI *task* arguments we can locate path of *task* in **IsaacLab** folder "
+    "or in CLI *task* arguments we can locate path of *task* in **IsaacLab** folder is in `source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole` is contain with configure file is **`cartpole_env_cfg.py`** and task is calling in **`__init__.py`** with register with task name(id) in CLI\n",
+    "\n",
+    "```python\n",
+    "# code from __init__.py\n",
+    "gym.register(\n",
+    "    id=\"Isaac-Cartpole-v0\",\n",
+    "    entry_point=\"omni.isaac.lab.envs:ManagerBasedRLEnv\",\n",
+    "    disable_env_checker=True,\n",
+    "    kwargs={\n",
+    "        \"env_cfg_entry_point\": f\"{__name__}.cartpole_env_cfg:CartpoleEnvCfg\", # Call enviroment is this line\n",
+    "        \"rl_games_cfg_entry_point\": f\"{agents.__name__}:rl_games_ppo_cfg.yaml\",\n",
+    "        \"rsl_rl_cfg_entry_point\": f\"{agents.__name__}.rsl_rl_ppo_cfg:CartpolePPORunnerCfg\",\n",
+    "        \"skrl_cfg_entry_point\": f\"{agents.__name__}:skrl_ppo_cfg.yaml\",\n",
+    "        \"sb3_cfg_entry_point\": f\"{agents.__name__}:sb3_ppo_cfg.yaml\",\n",
+    "    },\n",
+    ")\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In better we can found configuration path of environment in \n",
-    "https://isaac-sim.github.io/IsaacLab/main/source/overview/environments.html\n",
+    "In better we can found configuration path of environment in https://isaac-sim.github.io/IsaacLab/main/source/overview/environments.html\n",
     "https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole/cartpole_env_cfg.py\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configuration file is in `/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole/cartpole_env_cfg.py` \n",
+    "- **Environment Configuration** : in line 158 in `class CartpoleEnvCfg(ManagerBasedRLEnvCfg)` it's contain all configuration includes scene , observations , events , rewards , terminations.\n",
+    "    ```python\n",
+    "    @configclass\n",
+    "    class CartpoleEnvCfg(ManagerBasedRLEnvCfg):\n",
+    "        \"\"\"Configuration for the cartpole environment.\"\"\"\n",
+    "\n",
+    "        # Scene settings\n",
+    "        scene: CartpoleSceneCfg = CartpoleSceneCfg(num_envs=4096, env_spacing=4.0)\n",
+    "        # Basic settings\n",
+    "        observations: ObservationsCfg = ObservationsCfg()\n",
+    "        actions: ActionsCfg = ActionsCfg()\n",
+    "        events: EventCfg = EventCfg()\n",
+    "        # MDP settings\n",
+    "        rewards: RewardsCfg = RewardsCfg()\n",
+    "        terminations: TerminationsCfg = TerminationsCfg()\n",
+    "\n",
+    "        # Post initialization\n",
+    "        def __post_init__(self) -> None:\n",
+    "            \"\"\"Post initialization.\"\"\"\n",
+    "            # general settings\n",
+    "            self.decimation = 2\n",
+    "            self.episode_length_s = 5\n",
+    "            # viewer settings\n",
+    "            self.viewer.eye = (8.0, 0.0, 5.0)\n",
+    "            # simulation settings\n",
+    "            self.sim.dt = 1 / 120\n",
+    "            self.sim.render_interval = self.decimation\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Action Space** : in line 59 in `class ActionsCfg`\n",
+    "\n",
+    "    ```python\n",
+    "    class ActionsCfg:\n",
+    "        \"\"\"Action specifications for the MDP.\"\"\"\n",
+    "\n",
+    "        joint_effort = mdp.JointEffortActionCfg(asset_name=\"robot\", joint_names=[\"slider_to_cart\"], scale=100.0)\n",
+    "    ```\n",
+    "    - setting joint effort to target\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Observation Space** : in line 65 in `class ObservationsCfg`\n",
+    "\n",
+    "    ```python\n",
+    "\n",
+    "    @configclass\n",
+    "    class ObservationsCfg:\n",
+    "        \"\"\"Observation specifications for the MDP.\"\"\"\n",
+    "\n",
+    "        @configclass\n",
+    "        class PolicyCfg(ObsGroup):\n",
+    "            \"\"\"Observations for policy group.\"\"\"\n",
+    "\n",
+    "            # observation terms (order preserved)\n",
+    "            joint_pos_rel = ObsTerm(func=mdp.joint_pos_rel)\n",
+    "            joint_vel_rel = ObsTerm(func=mdp.joint_vel_rel)\n",
+    "\n",
+    "            def __post_init__(self) -> None:\n",
+    "                self.enable_corruption = False\n",
+    "                self.concatenate_terms = True\n",
+    "\n",
+    "        # observation groups\n",
+    "        policy: PolicyCfg = PolicyCfg()\n",
+    "\n",
+    "    ```\n",
+    "\n",
+    "    - policy group can observe joint position and joint velocity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Reward function**  : in line  112 in `class RewardsCfg`\n",
+    "\n",
+    "    ```python\n",
+    "    class RewardsCfg:\n",
+    "    \"\"\"Reward terms for the MDP.\"\"\"\n",
+    "\n",
+    "    # (1) Constant running reward\n",
+    "    alive = RewTerm(func=mdp.is_alive, weight=1.0)\n",
+    "    # (2) Failure penalty\n",
+    "    terminating = RewTerm(func=mdp.is_terminated, weight=-2.0)\n",
+    "    # (3) Primary task: keep pole upright\n",
+    "    pole_pos = RewTerm(\n",
+    "        func=mdp.joint_pos_target_l2,\n",
+    "        weight=-1.0,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"cart_to_pole\"]), \"target\": 0.0},\n",
+    "    )\n",
+    "    # (4) Shaping tasks: lower cart velocity\n",
+    "    cart_vel = RewTerm(\n",
+    "        func=mdp.joint_vel_l1,\n",
+    "        weight=-0.01,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"slider_to_cart\"])},\n",
+    "    )\n",
+    "    # (5) Shaping tasks: lower pole angular velocity\n",
+    "    pole_vel = RewTerm(\n",
+    "        func=mdp.joint_vel_l1,\n",
+    "        weight=-0.005,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"cart_to_pole\"])},\n",
+    "    )\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Termination Condition** in line 140\n",
+    "\n",
+    "    ```python\n",
+    "    class TerminationsCfg:\n",
+    "    \"\"\"Termination terms for the MDP.\"\"\"\n",
+    "\n",
+    "    # (1) Time out\n",
+    "    time_out = DoneTerm(func=mdp.time_out, time_out=True)\n",
+    "    # (2) Cart out of bounds\n",
+    "    cart_out_of_bounds = DoneTerm(\n",
+    "        func=mdp.joint_pos_out_of_manual_limit,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"slider_to_cart\"]), \"bounds\": (-3.0, 3.0)},\n",
+    "    )\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Answer 1.2**\n",
+    "*2.  What are the action space and observation space for an agent defined in the Isaac-Cartpole-v0 task?*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In file `source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole/__init__.py` and in line 18\n",
+    "\n",
+    "```python\n",
+    "gym.register(\n",
+    "    id=\"Isaac-Cartpole-v0\",\n",
+    "    entry_point=\"omni.isaac.lab.envs:ManagerBasedRLEnv\",\n",
+    "    disable_env_checker=True,\n",
+    "    kwargs={\n",
+    "        \"env_cfg_entry_point\": f\"{__name__}.cartpole_env_cfg:CartpoleEnvCfg\",\n",
+    "        \"rl_games_cfg_entry_point\": f\"{agents.__name__}:rl_games_ppo_cfg.yaml\",\n",
+    "        \"rsl_rl_cfg_entry_point\": f\"{agents.__name__}.rsl_rl_ppo_cfg:CartpolePPORunnerCfg\",\n",
+    "        \"skrl_cfg_entry_point\": f\"{agents.__name__}:skrl_ppo_cfg.yaml\",\n",
+    "        \"sb3_cfg_entry_point\": f\"{agents.__name__}:sb3_ppo_cfg.yaml\",\n",
+    "    },\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "are define environment configure of task in `cartpole_env_cfg` and agent configuration in `sb3_ppo_cfg.yaml`\n",
+    "- **Action Space** : in line 59\n",
+    "    ```python\n",
+    "    class ActionsCfg:\n",
+    "    \"\"\"Action specifications for the MDP.\"\"\"\n",
+    "\n",
+    "    joint_effort = mdp.JointEffortActionCfg(asset_name=\"robot\", joint_names=[\"slider_to_cart\"], scale=100.0)\n",
+    "    ```\n",
+    "    - create an action term that controls the force applied to the cart(joint effort). to the cart to balance the pole\n",
+    "\n",
+    "- **Observation Space** : in line 66\n",
+    "\n",
+    "    ```python\n",
+    "    class ObservationsCfg:\n",
+    "    \"\"\"Observation specifications for the MDP.\"\"\"\n",
+    "\n",
+    "    @configclass\n",
+    "    class PolicyCfg(ObsGroup):\n",
+    "        \"\"\"Observations for policy group.\"\"\"\n",
+    "\n",
+    "        # observation terms (order preserved)\n",
+    "        joint_pos_rel = ObsTerm(func=mdp.joint_pos_rel)\n",
+    "        joint_vel_rel = ObsTerm(func=mdp.joint_vel_rel)\n",
+    "\n",
+    "        def __post_init__(self) -> None:\n",
+    "            self.enable_corruption = False\n",
+    "            self.concatenate_terms = True\n",
+    "\n",
+    "    # observation groups\n",
+    "    policy: PolicyCfg = PolicyCfg()\n",
+    "    ```\n",
+    "    - oservation group named **policy** to collect observation term including with 2 term(Joint Position and Joint Velocity term)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Answer 1.3**\n",
+    "*3.How can episodes in the Isaac-Cartpole-v0 task be terminated?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in `cartpole_env_cfg.py` in line 140\n",
+    "\n",
+    "```python\n",
+    "class TerminationsCfg:\n",
+    "    \"\"\"Termination terms for the MDP.\"\"\"\n",
+    "\n",
+    "    # (1) Time out\n",
+    "    time_out = DoneTerm(func=mdp.time_out, time_out=True)\n",
+    "    # (2) Cart out of bounds\n",
+    "    cart_out_of_bounds = DoneTerm(\n",
+    "        func=mdp.joint_pos_out_of_manual_limit,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"slider_to_cart\"]), \"bounds\": (-3.0, 3.0)},\n",
+    "    )\n",
+    "```\n",
+    "\n",
+    "- termination conditions are have 2 conditions contain with\n",
+    "\n",
+    "1. Time out : Terminate the episode when the episode length exceeds the maximum episode length\n",
+    "    ```python\n",
+    "    time_out = DoneTerm(func=mdp.time_out, time_out=True)\n",
+    "    ```\n",
+    "\n",
+    "2. Cart out of bounds : Terminate when the asset's joint positions are outside of the configured bounds.\n",
+    "    ```python\n",
+    "    cart_out_of_bounds = DoneTerm(\n",
+    "    func=mdp.joint_pos_out_of_manual_limit,\n",
+    "    params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"slider_to_cart\"]), \"bounds\": (-3.0, 3.0)},\n",
+    "    )\n",
+    "    ```\n",
+    "    - in this line we setting boundary is -3 to 3\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Answer 1.4**\n",
+    "*4.How many reward terms are used to train an agent in the Isaac-Cartpole-v0 task?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in line 112 `class RewardsCfg`\n",
+    "```python\n",
+    "class RewardsCfg:\n",
+    "    \"\"\"Reward terms for the MDP.\"\"\"\n",
+    "\n",
+    "    # (1) Constant running reward\n",
+    "    alive = RewTerm(func=mdp.is_alive, weight=1.0)\n",
+    "    # (2) Failure penalty\n",
+    "    terminating = RewTerm(func=mdp.is_terminated, weight=-2.0)\n",
+    "    # (3) Primary task: keep pole upright\n",
+    "    pole_pos = RewTerm(\n",
+    "        func=mdp.joint_pos_target_l2,\n",
+    "        weight=-1.0,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"cart_to_pole\"]), \"target\": 0.0},\n",
+    "    )\n",
+    "    # (4) Shaping tasks: lower cart velocity\n",
+    "    cart_vel = RewTerm(\n",
+    "        func=mdp.joint_vel_l1,\n",
+    "        weight=-0.01,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"slider_to_cart\"])},\n",
+    "    )\n",
+    "    # (5) Shaping tasks: lower pole angular velocity\n",
+    "    pole_vel = RewTerm(\n",
+    "        func=mdp.joint_vel_l1,\n",
+    "        weight=-0.005,\n",
+    "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"cart_to_pole\"])},\n",
+    "    )\n",
+    "```\n",
+    "\n",
+    "- Including with **5 terms** of reward terms\n",
+    "1. **Constant running reward** : getting reward for being alive (weight : 1)\n",
+    "\n",
+    "2. **Failure penalty** : Penalize terminated episodes that don't correspond to episodic timeouts. (weight : -2)\n",
+    "\n",
+    "3. **Primary task: keep pole upright** : Penalize joint position deviation from a target value(target value is 0.0). (weight : -1.0) \n",
+    "\n",
+    "4. **Shaping tasks: lower cart velocity** : Penalize cart velocities. (weight : -0.01)\n",
+    "\n",
+    "5. **Shaping tasks: lower pole angular velocity** : Penalize pole angular velocities. (weight : -0.005)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Part 2: Playing with Cartpole Rl Agent**\n",
+    "\n",
+    "### **Questions**\n",
+    "Let us adjust the weight of each reward term specified in the Isaac-Cartpole-v0 task and train the agent. Which results will be affected by this adjustment, and why? Submit the answers.\n",
+    "\n",
+    "You may further explore by modifying other aspects, such as the agent's action space, observation space, and termination conditions."
    ]
   }
  ],
