update  agent path and scene config

--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -190,7 +190,7 @@
     "        \"rl_games_cfg_entry_point\": f\"{agents.__name__}:rl_games_ppo_cfg.yaml\",\n",
     "        \"rsl_rl_cfg_entry_point\": f\"{agents.__name__}.rsl_rl_ppo_cfg:CartpolePPORunnerCfg\",\n",
     "        \"skrl_cfg_entry_point\": f\"{agents.__name__}:skrl_ppo_cfg.yaml\",\n",
-    "        \"sb3_cfg_entry_point\": f\"{agents.__name__}:sb3_ppo_cfg.yaml\",\n",
+    "        \"sb3_cfg_entry_point\": f\"{agents.__name__}:sb3_ppo_cfg.yaml\", # Call agent in this line\n",
     "    },\n",
     ")\n",
     "```\n"
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Termination Condition** in line 140\n",
+    "- **Termination Condition** in line 140 `class TerminationCfg`\n",
     "\n",
     "    ```python\n",
     "    class TerminationsCfg:\n",
@@ -339,6 +339,151 @@
     "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"slider_to_cart\"]), \"bounds\": (-3.0, 3.0)},\n",
     "    )\n",
     "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Cartpole Scene Configure** : all configure of cartpole scene include with robot(cartpole) , base(ground and dome_light) call find in line 34 in `class CartpoleSceneCfg`, we can find clue to path of root file of library from importing line to import library\n",
+    "\n",
+    "    ```python\n",
+    "    class CartpoleSceneCfg(InteractiveSceneCfg):\n",
+    "        \"\"\"Configuration for a cart-pole scene.\"\"\"\n",
+    "\n",
+    "        # ground plane\n",
+    "        ground = AssetBaseCfg(\n",
+    "            prim_path=\"/World/ground\",\n",
+    "            spawn=sim_utils.GroundPlaneCfg(size=(100.0, 100.0)),\n",
+    "        )\n",
+    "\n",
+    "        # cartpole\n",
+    "        robot: ArticulationCfg = CARTPOLE_CFG.replace(prim_path=\"{ENV_REGEX_NS}/Robot\")\n",
+    "\n",
+    "        # lights\n",
+    "        dome_light = AssetBaseCfg(\n",
+    "            prim_path=\"/World/DomeLight\",\n",
+    "            spawn=sim_utils.DomeLightCfg(color=(0.9, 0.9, 0.9), intensity=500.0),\n",
+    "        )\n",
+    "    ```\n",
+    "\n",
+    "    - **Ground** : Create a ground plane prim \n",
+    "    - **Dome Light** : Create a dome light in the scene with light color and light intensity (for inherit from LightCfg class)\n",
+    "        -   for more information for both asset(robot,ground), with base class of asset you can see in `class AssestBaseCfg` in path *source\\extensions\\omni.isaac.lab\\omni\\isaac\\lab\\assets\\asset_base_cfg.py*\n",
+    "        -   for DomeLight configuration in `class DomeLightCfh` *source\\extensions\\omni.isaac.lab\\omni\\isaac\\lab\\sim\\spawners\\lights\\lights_cfg.py*\n",
+    "        -   for GroundPlane configuration in `class GroundPlaneCfg` *source\\extensions\\omni.isaac.lab\\omni\\isaac\\lab\\sim\\spawners\\from_files\\from_files_cfg.py*\n",
+    "    - **Cartpole** : Create Cartpole by use existing configuration in variable `CARTPOLE_CFG`\n",
+    "        - configuration of cartpole is in *source\\extensions\\omni.isaac.lab_assets\\omni\\isaac\\lab_assets\\cartpole.py*\n",
+    "        ```python\n",
+    "            # Copyright (c) 2022-2025, The Isaac Lab Project Developers.\n",
+    "            # All rights reserved.\n",
+    "            #\n",
+    "            # SPDX-License-Identifier: BSD-3-Clause\n",
+    "\n",
+    "            \"\"\"Configuration for a simple Cartpole robot.\"\"\"\n",
+    "\n",
+    "\n",
+    "            import omni.isaac.lab.sim as sim_utils\n",
+    "            from omni.isaac.lab.actuators import ImplicitActuatorCfg\n",
+    "            from omni.isaac.lab.assets import ArticulationCfg\n",
+    "            from omni.isaac.lab.utils.assets import ISAACLAB_NUCLEUS_DIR\n",
+    "\n",
+    "            ##\n",
+    "            # Configuration\n",
+    "            ##\n",
+    "\n",
+    "            CARTPOLE_CFG = ArticulationCfg(\n",
+    "                spawn=sim_utils.UsdFileCfg(\n",
+    "                    usd_path=f\"{ISAACLAB_NUCLEUS_DIR}/Robots/Classic/Cartpole/cartpole.usd\",\n",
+    "                    rigid_props=sim_utils.RigidBodyPropertiesCfg(\n",
+    "                        rigid_body_enabled=True,\n",
+    "                        max_linear_velocity=1000.0,\n",
+    "                        max_angular_velocity=1000.0,\n",
+    "                        max_depenetration_velocity=100.0,\n",
+    "                        enable_gyroscopic_forces=True,\n",
+    "                    ),\n",
+    "                    articulation_props=sim_utils.ArticulationRootPropertiesCfg(\n",
+    "                        enabled_self_collisions=False,\n",
+    "                        solver_position_iteration_count=4,\n",
+    "                        solver_velocity_iteration_count=0,\n",
+    "                        sleep_threshold=0.005,\n",
+    "                        stabilization_threshold=0.001,\n",
+    "                    ),\n",
+    "                ),\n",
+    "                init_state=ArticulationCfg.InitialStateCfg(\n",
+    "                    pos=(0.0, 0.0, 2.0), joint_pos={\"slider_to_cart\": 0.0, \"cart_to_pole\": 0.0}\n",
+    "                ),\n",
+    "                actuators={\n",
+    "                    \"cart_actuator\": ImplicitActuatorCfg(\n",
+    "                        joint_names_expr=[\"slider_to_cart\"],\n",
+    "                        effort_limit=400.0,\n",
+    "                        velocity_limit=100.0,\n",
+    "                        stiffness=0.0,\n",
+    "                        damping=10.0,\n",
+    "                    ),\n",
+    "                    \"pole_actuator\": ImplicitActuatorCfg(\n",
+    "                        joint_names_expr=[\"cart_to_pole\"], effort_limit=400.0, velocity_limit=100.0, stiffness=0.0, damping=0.0\n",
+    "                    ),\n",
+    "                },\n",
+    "            )\n",
+    "            \"\"\"Configuration for a simple Cartpole robot.\"\"\"\n",
+    "        ```\n",
+    "        -   we can setting all of robot in this file\n",
+    "\n",
+    "    *The relative path is specified using the ENV_REGEX_NS variable, which is a special variable that is replaced with the environment name during scene creation*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Calling Agent** from task\n",
+    "\n",
+    "    in `Isaac-Cartpole-v0 task` in **`gym.register`** (in `__init__.py` same file of calling environment configure) we call also find agent configure for sb3\n",
+    "\n",
+    "\n",
+    "    in line 27\n",
+    "    ```python\n",
+    "    \"sb3_cfg_entry_point\": f\"{agents.__name__}:sb3_ppo_cfg.yaml\",\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in file `sb3_ppo_cfg.yaml` we call find all of configure to agent in code\n",
+    "\n",
+    "*relative path to file* : source\\extensions\\omni.isaac.lab_tasks\\omni\\isaac\\lab_tasks\\manager_based\\classic\\cartpole\\agents\\sb3_ppo_cfg.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  ```python\n",
+    "  # Reference: https://github.com/DLR-RM/rl-baselines3-zoo/blob/master/hyperparams/ppo.yml#L32\n",
+    "  seed: 42\n",
+    "\n",
+    "  n_timesteps: !!float 1e6\n",
+    "  policy: 'MlpPolicy'\n",
+    "  n_steps: 16\n",
+    "  batch_size: 4096\n",
+    "  gae_lambda: 0.95\n",
+    "  gamma: 0.99\n",
+    "  n_epochs: 20\n",
+    "  ent_coef: 0.01\n",
+    "  learning_rate: !!float 3e-4\n",
+    "  clip_range: !!float 0.2\n",
+    "  policy_kwargs: \"dict(\n",
+    "                    activation_fn=nn.ELU,\n",
+    "                    net_arch=[32, 32],\n",
+    "                    squash_output=False,\n",
+    "                  )\"\n",
+    "  vf_coef: 1.0\n",
+    "  max_grad_norm: 1.0\n",
+    "  device: \"cuda:0\"\n",
+    "  ```\n"
    ]
   },
   {
