--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -200,8 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In better we can found configuration path of environment in https://isaac-sim.github.io/IsaacLab/main/source/overview/environments.html\n",
-    "https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole/cartpole_env_cfg.py\n"
+    "In better we can found configuration path of environment in [[link for available environments](https://isaac-sim.github.io/IsaacLab/main/source/overview/environments.html)] or **[[link for cartpole environment](https://github.com/isaac-sim/IsaacLab/blob/main/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole/cartpole_env_cfg.py)]**\n"
    ]
   },
   {
@@ -429,6 +428,7 @@
     "            \"\"\"Configuration for a simple Cartpole robot.\"\"\"\n",
     "        ```\n",
     "        -   we can setting all of robot in this file\n",
+    "        -   all convension are can see in this [*[link](https://docs.omniverse.nvidia.com/isaacsim/latest/reference_conventions.html)*]\n",
     "\n",
     "    *The relative path is specified using the ENV_REGEX_NS variable, which is a special variable that is replaced with the environment name during scene creation*"
    ]
@@ -592,12 +592,13 @@
     "\n",
     "- termination conditions are have 2 conditions contain with\n",
     "\n",
-    "1. Time out : Terminate the episode when the episode length exceeds the maximum episode length\n",
+    "1. **`Time out`** : Terminate the episode when the episode length exceeds the maximum episode length\n",
     "    ```python\n",
     "    time_out = DoneTerm(func=mdp.time_out, time_out=True)\n",
     "    ```\n",
+    "    - for this code in `class CartpoleEnvCfg` we setting up episode lenght for 5 second\n",
     "\n",
-    "2. Cart out of bounds : Terminate when the asset's joint positions are outside of the configured bounds.\n",
+    "2. **`Cart out of bounds`** : Terminate when the asset's joint positions are outside of the configured bounds.\n",
     "    ```python\n",
     "    cart_out_of_bounds = DoneTerm(\n",
     "    func=mdp.joint_pos_out_of_manual_limit,\n",
