--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**Member**\n",
     "- Pavaris Asawakijtananont 65340500037\n",
-    "- Natnasa Lertmahakul 65340500021"
+    "- Phattarawat Kadrum 65340500074"
    ]
   },
   {
@@ -295,7 +295,8 @@
    "source": [
     "- **Reward function**  : in line  112 in `class RewardsCfg`\n",
     "\n",
-    "    ```python\n",
+    "\n",
+    "```python\n",
     "    class RewardsCfg:\n",
     "    \"\"\"Reward terms for the MDP.\"\"\"\n",
     "\n",
@@ -321,7 +322,7 @@
     "        weight=-0.005,\n",
     "        params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"cart_to_pole\"])},\n",
     "    )\n",
-    "    ```"
+    "```"
    ]
   },
   {
@@ -674,6 +675,114 @@
    "source": [
     "**Summary Result**\n",
     "- in some configuration agent can get a lot of reward or converge to maximum reward faster tha other configure but sometime reward not represent that primary or sub task in success it's depend on reward function and weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Part 3: Mapping RL Fundamentals**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. What is reinforcement learning and its component according to your understanding? Giving examples of each component according to the diagram consider the `Cartpole` problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- What is Reinforcement learning ?\n",
+    "Reinforcement learning is an agent that can make own decision from act to the environment. To find strategy to reach the goal(optimal policy).\n",
+    "\n",
+    "**Reinforcement learning component**\n",
+    "- Agent : is a actor that learn from action to environment and got reward and state from environment in next time step to learn.\n",
+    "    - In example of `Cartpole` agent is object that choose the action to act with environment to reach the goal. It consist of agent state and policy.\n",
+    "        - Agent state : state in term of cartpole agent state contains 4 state (Cart_vel, Cart_pos, Pole_vel, Pole_pos). from code we setting up observation term as a term of agent(assumption of RL state_t = observation_t in`MDP` )\n",
+    "        - Observation : is define the state that are observable by agent from example in Cartpole is setting to observable in term of 4 state\n",
+    "\n",
+    "\n",
+    "        ```python\n",
+    "            joint_pos_rel = ObsTerm(func=mdp.joint_pos_rel) # consist position of cart and pole (2 state)\n",
+    "            joint_vel_rel = ObsTerm(func=mdp.joint_vel_rel) # consist velocity of cart and pole (2 state)\n",
+    "        ```  \n",
+    "\n",
+    "        - Policy : is a function that mapping state to action by giving a probability of each action from input state to select a action of agent. In term of Cartpole in IsaacLab we can't define policy in code. but we know the type of policy is `policy: MlpPolicy` from agent configure file `sb3_ppo_cfg.yaml`\n",
+    "- Action : The possible move or decision that agent can act with the environment.\n",
+    "    - In example of `Cartpole` action is a decision to make cart move (right or left) by apply effort (Torque). We found in `cartpole_env_cfg.py`\n",
+    "\n",
+    "    ```python\n",
+    "        joint_effort = mdp.JointEffortActionCfg(asset_name=\"robot\", joint_names=[\"slider_to_cart\"], scale=100.0)\n",
+    "    ```\n",
+    "- Environment : The system that agent interact with. It is how we initialize or setting up the problem.\n",
+    "    - In example of `Cartpole` It it how the world is setting up. What actions agent can do, rewards that agent gain or event that happened to the agent.\n",
+    "    - set up a actuator configure what agent can do with cartpole and contrains in `cartpole.py` and in `CARTPOLE_CFG`\n",
+    "\n",
+    "\n",
+    "- Reward : The scalar feedback from environment that tell agent how good is the action. The goal is to maximize the cumulative reward (return).\n",
+    "    - In exmaple of `Cartpole` we found the reward config in `cartpole_env_cfg.py`\n",
+    "    \n",
+    "    ```python\n",
+    "        class RewardsCfg:\n",
+    "        \"\"\"Reward terms for the MDP.\"\"\"\n",
+    "\n",
+    "        # (1) Constant running reward\n",
+    "        alive = RewTerm(func=mdp.is_alive, weight=1.0)\n",
+    "        # (2) Failure penalty\n",
+    "        terminating = RewTerm(func=mdp.is_terminated, weight=-2.0)\n",
+    "        # (3) Primary task: keep pole upright\n",
+    "        pole_pos = RewTerm(\n",
+    "            func=mdp.joint_pos_target_l2,\n",
+    "            weight=-1.0,\n",
+    "            params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"cart_to_pole\"]), \"target\": 0.0},\n",
+    "        )\n",
+    "        # (4) Shaping tasks: lower cart velocity\n",
+    "        cart_vel = RewTerm(\n",
+    "            func=mdp.joint_vel_l1,\n",
+    "            weight=-0.01,\n",
+    "            params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"slider_to_cart\"])},\n",
+    "        )\n",
+    "        # (5) Shaping tasks: lower pole angular velocity\n",
+    "        pole_vel = RewTerm(\n",
+    "            func=mdp.joint_vel_l1,\n",
+    "            weight=-0.005,\n",
+    "            params={\"asset_cfg\": SceneEntityCfg(\"robot\", joint_names=[\"cart_to_pole\"])},\n",
+    "    )\n",
+    "    ```\n",
+    "\n",
+    "- State : It have **Agent state** and **Environment state**.\n",
+    "    - Agent state : The agent percives.\n",
+    "    - Environment state : Represent state of internal state of environment ,The state that can be invisible from agent.\n",
+    "    - In example of `Cartpole` the Agent state = Environment state (Assumption of this problem is [MDP]).\n",
+    "\n",
+    "in IsaacLab scene is define a **Environment state** and observation is define the state that are observable by agent\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. What is the difference between the reward, return, and the value function?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **`Reward`** : A scalar feedback that told the agent how good the action is in time `t`.\n",
+    "- **`Return`** : Cumulative reward (from t+1, t+2, ... ) that we want to maximize.\n",
+    "- **`Value function`** : Expected value of return given state and action choosen from policy\n",
+    "    - Probablity of next action from current state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Consider policy, state, value function, and model as mathematic functions, what would each one take as input and output?"
    ]
   }
  ],
