--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -425,6 +425,7 @@
     "    joint_effort = mdp.JointEffortActionCfg(asset_name=\"robot\", joint_names=[\"slider_to_cart\"], scale=100.0)\n",
     "    ```\n",
     "    - create an action term that controls the force applied to the cart(joint effort). to the cart to balance the pole\n",
+    "    - have 1  for action space\n",
     "\n",
     "- **Observation Space** : in line 66\n",
     "\n",
@@ -447,7 +448,8 @@
     "    # observation groups\n",
     "    policy: PolicyCfg = PolicyCfg()\n",
     "    ```\n",
-    "    - oservation group named **policy** to collect observation term including with 2 term(Joint Position and Joint Velocity term)\n"
+    "    - oservation group named **policy** to collect observation term including with 4 term(Joint Position and Joint Velocity term of cart and pole)\n",
+    "    - 4 for observation space"
    ]
   },
   {
@@ -674,7 +676,14 @@
    "metadata": {},
    "source": [
     "**Summary Result**\n",
-    "- in some configuration agent can get a lot of reward or converge to maximum reward faster tha other configure but sometime reward not represent that primary or sub task in success it's depend on reward function and weight"
+    "- in some configuration agent can get a lot of reward or converge to maximum reward faster tha other configure but sometime reward not represent that primary or sub task in success it's depend on reward function and weight "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n"
    ]
   },
   {
@@ -695,8 +704,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- What is Reinforcement learning ?\n",
-    "Reinforcement learning is an agent that can make own decision from act to the environment. To find strategy to reach the goal(optimal policy).\n",
+    "**What is Reinforcement learning ?**\n",
+    "- Reinforcement learning is an agent that can make own decision from act to the environment. To find strategy to reach the goal(optimal policy).\n",
     "\n",
     "**Reinforcement learning component**\n",
     "- Agent : is a actor that learn from action to environment and got reward and state from environment in next time step to learn.\n",
@@ -758,7 +767,8 @@
     "    - Environment state : Represent state of internal state of environment ,The state that can be invisible from agent.\n",
     "    - In example of `Cartpole` the Agent state = Environment state (Assumption of this problem is [MDP]).\n",
     "\n",
-    "in IsaacLab scene is define a **Environment state** and observation is define the state that are observable by agent\n"
+    "\n",
+    "> in IsaacLab scene is define a **Environment state** and observation is define the state that are observable by agent\n"
    ]
   },
   {
@@ -783,6 +793,41 @@
    "metadata": {},
    "source": [
     "3. Consider policy, state, value function, and model as mathematic functions, what would each one take as input and output?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from **Bellman Equation**\n",
+    "\n",
+    "$$\n",
+    "v_{\\pi} = \\mathbb{E}[R_{t+1} + \\gamma v_{\\pi}(S_{t+1}) | S_{t} = s , A_t \\sim \\pi(s)]\n",
+    "$$\n",
+    "\n",
+    "In RL we try to find the optimal policy from maximize return, to maximize we need to known current state, action from policy then we can know the probability of action in next time step from policy and we can find expected value\n",
+    "**For Value Function**\n",
+    "- Input\n",
+    "    - `Current State` : we can know state of agent from observation term\n",
+    "    - `Action` : action from policy\n",
+    "- Output\n",
+    "    - `Value Function` : from expected return \n",
+    "\n",
+    "A Model predicts what will happen next in the environment(can be reward, state , etc) \n",
+    "\n",
+    "Example : model $P$ to predict next state is\n",
+    "$$\n",
+    "P(s,a,s') \\approx p(S_{t+1}=s' | S_t = s , A_t = a)\n",
+    "$$\n",
+    "\n",
+    "**Model**\n",
+    "- Input \n",
+    "    - State : current state\n",
+    "    - Action : current action\n",
+    "- Output\n",
+    "    - Can be anything example reward or state\n",
+    "    - from equation is predict next state, output is probability for each next state\n",
+    "\n"
    ]
   }
  ],
